fixed aside elements, now align properly on page

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -90,6 +90,7 @@ section h2 {
     font-size: 20px;
 }
 
+
 /* aside */
 aside {
     width: 20%;
@@ -100,20 +101,14 @@ aside {
     padding: 15px;
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri' , 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
-}
-
-aside {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-aside p, h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
+
 
 .aside {
-    width: 20%;
+    text-align:center;
     height: 100%;
     clear: both;
     float: right;
@@ -123,15 +118,6 @@ aside p, h3 {
     background-color: #2589bd;
 }
 
-.aside {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.aside p, h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
 aside img {
     margin: 10px;
     max-width: 150px;
